# Sorter

./: README.md  bundle.js  index.html  package-lock.json  src_Workers_AnimationWorker_ts.bundle.js  src_Workers_TypescriptWorker_ts.bundle.js  src_Workers_WasmWorker_ts.bundle.js
Sorter_browser/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
Sorter_browser/Sorter/: bundle.js  src_Workers_AnimationWorker_ts.bundle.js  src_Workers_TypescriptWorker_ts.bundle.js  src_Workers_WasmWorker_ts.bundle.js
Sorter_browser/src/: index.html  index.js
Sorter_browser/src/Sorter/: Sorter.css  Sorter.tsx
Sorter_browser/src/Sorts/bubbleSort/: bubbleSort.ts  bubbleSortAnimation.ts
Sorter_browser/src/Sorts/heapSort/: heapSortAnimation.ts
Sorter_browser/src/Sorts/insertionSort/: insertionSort.ts  insertionSortAnimation.ts
Sorter_browser/src/Sorts/mergeSort/: mergeSort.ts  mergeSortAnimation.ts
Sorter_browser/src/Sorts/quickSort/: quickSort.ts  quickSortAnimation.ts
Sorter_browser/src/Workers/: AnimationWorker.ts  TypescriptWorker.ts  WasmWorker.ts  correctness.ts
Sorter_browser/src/bubbleSort/: bubbleSortAnimation.ts
Sorter_browser/src/heapSort/: heapSort.ts  heapSortAnimation.ts
Sorter_browser/src/quickSort/: quickSortAnimation.ts
Sorter_browser/src/shellSort/: shellSort.ts  shellSortAnimation.ts
algorithms_in_rust_for_wasm/: Cargo.toml  notes
algorithms_in_rust_for_wasm/src/: lib.rs
docs/: bundle.js  index.html  src_Workers_TypescriptWorker_ts.bundle.js  src_Workers_WasmWorker_ts.bundle.js
(+3 files in other folders)
