[package]
name = "algorithms_in_rust_for_wasm"
version = "0.1.0"
authors = ["ericnsibley <ericnsibley@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "algorithms_in_rust_for_wasm"
path = "src/lib.rs"
#crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

#[[bin]]
#name = "testbench"
#path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"

[profile.release]
opt-level = "s"